--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,5 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  background: linear-gradient(to right, rgb(35, 149, 241), rgb(0, 0, 255));
 }
